# pjuftring.github.io

./: CNAME  README.md  index.html  index.js
TicTacToe/: index.html  lib.rs  tictactoe.js  tictactoe.js.map  tictactoe.ts  ttt.js  ttt_bg.d.ts  ttt_bg.wasm
automaton/: automaton.js  automaton.ts  index.html
gl/: Cargo.toml  index.html
gl/pkg/: gl.d.ts  gl.js  gl_bg.d.ts  gl_bg.js  gl_bg.wasm  opt.wasm  package.json
gl/pkg/snippets/gl-2a10df21248283f2/src/: helper.js
gl/src/: drawable.rs  helper.ts  lib.rs  mesh.rs  wasm.rs
gl/src/glsl/: simple.frag  simple.vert
pkg/: wendytale.js  wendytale_bg.wasm
pkg/snippets/wendytale-708d8ccb4e72f1d8/src/: glue.js
ttt/: TicTacToe.keinezip  arena.css  package.json  tsconfig.json  ttt.d.ts
