[package]
name = "gl"
version = "0.1.0"
authors = ["pjuftring <pjuftring@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.62"
web-sys = {version = "0.3.39", features = ["WebGlBuffer", "WebGlProgram", "WebGlUniformLocation"]}
js-sys = "0.3.39"
nalgebra = "0.21.0"
lazy_static = "1.4.0"